# cobra

./: .gitattributes  .gitignore  .gitmodules  Cobra-iOS.podspec  DELETEME.TXT  LICENSE  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/actions/c-filedemo/: action.yml
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  c-codestyle.yml  c-demos.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  java-codestyle.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs-perf.yml  nodejs.yml  python-codestyle.yml  python-demos.yml  python-perf.yml  python.yml  rust-codestyle.yml  rust-demos.yml  rust.yml  spell-check.yml  swift-codestyle.yml  web-codestyle.yml  web-demos.yml  web-perf.yml  web.yml
binding/android/: README.md  build.gradle
binding/android/Cobra/: .gitignore  build.gradle  settings.gradle
binding/android/CobraTestApp/: .gitignore  copy_test_resources.sh  settings.gradle
binding/android/cobra/: .gitignore  (+2 more)
binding/dotnet/: .gitignore  Cobra.sln  README.md
binding/ios/: Cobra-iOS.podspec  Cobra.swift  CobraErrors.swift  CobraManager.swift  README.md
binding/nodejs/: README.md  copy.js  package.json
binding/python/: .gitignore  README.md  __init__.py  _cobra.py  _factory.py  _util.py  cobra.py  setup.py  test_cobra.py  test_cobra_perf.py  test_util.py  util.py
binding/rust/: Cargo.toml  README.md  build.rs  copy.sh  test.sh
binding/rust/src/: cobra.rs  lib.rs  util.rs
binding/rust/tests/: cobra_tests.rs
binding/web/: .gitignore  README.md  cypress.config.ts  package.json
demo/android/: README.md
demo/c/: CMakeLists.txt  README.md  cobra_demo_file.c  cobra_demo_mic.c
demo/c/test/: test_cobra_c.py  test_util.py
demo/dotnet/: .gitignore  CobraDemo.sln  README.md
demo/ios/: README.md
demo/mcu/: README.md
demo/nodejs/: README.md  file.js  mic.js  package.json  wave_util.js
demo/python/: .gitignore  README.md  cobra_demo_file.py  cobra_demo_mic.py  requirements.txt  setup.py
demo/rust/: README.md
demo/web/: README.md  eslint.config.mjs  index.html  package.json
include/: picovoice.h  pv_cobra.h  pv_cobra_mcu.h
lib/wasm/: pv_cobra.js  pv_cobra.wasm  pv_cobra_pthread.js  pv_cobra_pthread.wasm  pv_cobra_simd.js  pv_cobra_simd.wasm
script/automation/: browserstack.py  devicefarm.py
(+178 files in other folders)
