[package]
name = "pv_cobra"
version = "1.1.4"
edition = "2018"
description = "The Rust bindings for Picovoice's Cobra library"
license = "Apache-2.0"
homepage = "https://picovoice.ai/platform/cobra/"
repository = "https://github.com/Picovoice/cobra"
keywords = [
	"voice-activity",
	"voice-detection",
	"VAD",
]
publish = true

include = [
	".gitignore",
	"build.rs",
	"Cargo.toml",
	"data/",
	"README.md",
	"src/",
]

[lib]
name = "cobra"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.7"
log = "0.4"

[dev-dependencies]
rodio = "0.16"
itertools = "0.10"
